<resources>
    <string name="app_name">Comp3330_Project</string>
    <string name="createProfile">Create Profile</string>
    <string name="modifyProfile">Modify Profile</string>
    <string name="login">Login</string>
    <string name="homeButtonDescription">Home</string>
    <string name="nutrihealth">NutriHealth</string>
    <string name="calories_tracker">Calories Tracker</string>
    <string name="exercise_tracker">Exercise Tracker</string>
    <string name="step_counter">Step Counter</string>
    <string name="calories_calculation">Calories Calculation</string>
    <string name="heartbeat_rate_tracker">Heartbeat Rate Tracker</string>
    <string name="data_summary">Data Summary</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="input_food_info">Input food info:</string>
    <string name="input_exercise_info">Input exercise info:</string>
    <string name="exercise_name">Exercise Name:</string>
    <string name="food_name">Food Name:</string>
    <string name="intensity">Intensity</string>
    <string name="time_spent">Time Spent:</string>
    <string name="calories_burnt">Calories Burnt:</string>
    <string name="calories_value">Calories Value:</string>
    <string name="caloriesTrackerAddButton">Add</string>
    <string name="caloriesTackerCaloriesHint">Calories(kcal)</string>
    <string name="CaloriesTrackerFoodName">Name</string>
    <string name="view_exercise_record">View Exercise Record</string>

    <string name="output_hint">
        Please place your finger on the device\'s camera, covering the flash as well. After
        10 seconds, you can export the results through the menu.
        \n\nThis utility works by measuring the amount of red it sees through the camera, and
        attempting to detect the fluctuations.
        \nIt works better in a darkened room, and when the pressure on the camera is constant.
        \nIf there are multiple cameras on your device, make sure that your finger covers the entire
        field of view in the small viewfinder.
        \nOnce the measurement is complete, it can be exported or repeated through the menu.
    </string>
    <string name="output_header_template">Heart rate on %s</string>
    <string name="output_detected_peaks_header">Detected Peaks:</string>
    <string name="send_output_to">Send output to:</string>
    <string name="separator">,</string>
    <string name="row_separator">\n</string>
    <string name="raw_values">Measurements (Timestamp, Value)</string>
    <string name="cameraPermissionRequired">Camera permission is required for this application to work.</string>
    <string name="noFlashWarning">Measurement without flash is less reliable.</string>
    <string name="new_measurement">New Measurement</string>
    <string name="export_result">Export Result</string>
    <string name="export_details">Export Details</string>
    <string name="dateFormat">yyyy-MM-dd\'T\'HH:mm:ssZZZZZ</string>
    <string name="dateFormatGranular">yyyy-MM-dd\'T\'HH:mm:ss.SSSZZZZZ</string>
    <string name="camera_not_found">Camera not available.</string>
    <string name="view_calories_record">View Calories Record</string>
    <plurals name="measurement_output_template">
        <item quantity="zero">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
        <item quantity="one">Pulse: %2.1f (%d cycle in %2.1f seconds)</item>
        <item quantity="other">Pulse: %2.1f (%d cycles in %2.1f seconds)</item>
    </plurals>
</resources>