<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/appName_MainMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:text="@string/nutrihealth"
            android:textAlignment="center"
            android:textSize="50sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/caloriesTrackerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calories_tracker"
                android:backgroundTint="@color/colorAccent"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/exerciseTrackerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/exercise_tracker"
                android:backgroundTint="@color/colorAccent"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/stepCounterButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/step_counter"
                android:backgroundTint="@color/colorAccent"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/caloriesCalculationButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/calories_calculation"
                android:backgroundTint="@color/colorAccent"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/heartRateButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/heartbeat_rate_tracker"
                android:backgroundTint="@color/colorAccent"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/summaryButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/data_summary"
                android:backgroundTint="@color/colorAccent"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/settingButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_setting"
                android:backgroundTint="@color/colorAccent"
                android:textSize="30sp"/>

            <Button
                android:id="@+id/testCalories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="test" />

            <Button
                android:id="@+id/testUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="test"/>

        </LinearLayout>


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>